# IndusPilot

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
backend/: CMakeLists.txt  induspilot-backend.pro
backend/include/induspilot/api/: api_types.hpp  router.hpp
backend/include/induspilot/app/: application.hpp  config.hpp  logger.hpp
backend/include/induspilot/data/: data_connectors.hpp  in_memory_repositories.hpp  mysql_repositories.hpp  repositories.hpp
backend/include/induspilot/domain/: domain_types.hpp
backend/include/induspilot/http/: drogon_server.hpp
backend/include/induspilot/modules/: ai_service.hpp  alert_service.hpp  asset_service.hpp  audit_service.hpp  identity_service.hpp  maintenance_service.hpp  monitoring_service.hpp  password_hasher.hpp  service_status.hpp  session_store.hpp
backend/src/: main.cpp
backend/src/api/: api_types.cpp  router.cpp
backend/src/app/: application.cpp  config.cpp  logger.cpp
backend/src/data/: data_connectors.cpp  in_memory_repositories.cpp  mysql_repositories.cpp
backend/src/http/: drogon_server.cpp
backend/src/modules/: ai_service.cpp  alert_service.cpp  asset_service.cpp  audit_service.cpp  identity_service.cpp  maintenance_service.cpp  monitoring_service.cpp  password_hasher.cpp  session_store.cpp
backend/tests/: backend_foundation_tests.cpp  http_integration_smoke.ps1
client/: CMakeLists.txt  induspilot-client.pro
client/src/: api_client.cpp  api_client.hpp  main.cpp  main_window.cpp  main_window.hpp
config/: ai.example.yaml  backend.example.yaml  client.example.json
database/mongodb/: init_collections.js
database/mysql/: 001_foundation_schema.sql  002_seed_identity.sql  003_runtime_persistence_schema.sql  004_work_order_attachments_schema.sql  005_alert_rules_notifications_schema.sql  006_alert_notification_delivery_schema.sql  007_operation_audit_events_schema.sql  008_operation_audit_export_permission.sql  009_operation_audit_integrity_schema.sql
database/redis/: README.md
deployment/: docker-compose.yml  preflight.ps1
docs/: deployment-backend.md  production-readiness.md
docs/architecture/: ai-assistance.md  future-modules.md  technology-decisions.md
docs/development/: backend-http-service.md  local-startup.md  toolchain-status.md
openspec/changes/add-operation-audit-integrity/: proposal.md  tasks.md
openspec/changes/add-operation-audit-integrity/specs/platform-foundation/: spec.md
openspec/changes/agent-diagnosis-orchestration/: proposal.md  tasks.md
openspec/changes/agent-diagnosis-orchestration/specs/ai-diagnosis-assistance/: spec.md
openspec/changes/agent-diagnosis-orchestration/specs/platform-foundation/: spec.md
openspec/changes/archive/2026-07-18-define-induspilot-foundation/: tasks.md
openspec/changes/archive/2026-07-18-implement-alert-management-api/: tasks.md
openspec/changes/archive/2026-07-18-implement-industrial-assets-api/: proposal.md
openspec/changes/archive/2026-07-18-implement-operational-monitoring-api/: proposal.md
openspec/changes/archive/2026-07-18-productionize-backend-platform/: proposal.md  tasks.md
openspec/changes/archive/2026-07-23-implement-ai-diagnosis-api/: proposal.md
openspec/changes/archive/2026-07-23-implement-maintenance-workflow-api/: proposal.md
openspec/changes/connect-qt-ai-audit-export/: proposal.md  tasks.md
openspec/changes/connect-qt-ai-audit-export/specs/platform-foundation/: spec.md
openspec/changes/connect-qt-ai-audit-pagination/: proposal.md  tasks.md
openspec/changes/connect-qt-ai-audit-pagination/specs/platform-foundation/: spec.md
openspec/changes/connect-qt-ai-diagnosis/: proposal.md  tasks.md
openspec/changes/connect-qt-ai-interactions/: proposal.md  tasks.md
openspec/changes/connect-qt-alert-actions/: proposal.md  tasks.md
openspec/changes/connect-qt-alert-create/: proposal.md  tasks.md
openspec/changes/connect-qt-alert-rules-notifications/: proposal.md  tasks.md
openspec/changes/connect-qt-asset-status/: proposal.md  tasks.md
openspec/changes/connect-qt-client-http/: proposal.md  tasks.md
openspec/changes/connect-qt-monitoring-alerts/: proposal.md  tasks.md
openspec/changes/connect-qt-monitoring-write/: proposal.md  tasks.md
openspec/changes/connect-qt-operation-audit/: proposal.md  tasks.md
openspec/changes/connect-qt-work-order-create-assign/: proposal.md  tasks.md
openspec/changes/connect-qt-work-order-edit-attachments/: proposal.md  tasks.md
openspec/changes/connect-qt-work-order-from-alert/: proposal.md  tasks.md
openspec/changes/connect-qt-work-orders/: proposal.md  tasks.md
openspec/changes/define-induspilot-foundation/: design.md  proposal.md  tasks.md
openspec/changes/export-operation-audit-csv/: proposal.md  tasks.md
openspec/changes/extend-alert-notification-delivery/: proposal.md  tasks.md
openspec/changes/extend-operation-audit-query/: proposal.md  tasks.md
openspec/changes/fix-ci-backend-generator/: proposal.md  tasks.md
openspec/changes/harden-identity-passwords/: proposal.md  tasks.md
openspec/changes/implement-ai-diagnosis-api/: tasks.md
openspec/changes/implement-alert-management-api/: proposal.md  tasks.md
openspec/changes/implement-industrial-assets-api/: tasks.md
openspec/changes/implement-maintenance-workflow-api/: tasks.md
openspec/changes/implement-operational-monitoring-api/: tasks.md
openspec/changes/persist-runtime-modules/: proposal.md  tasks.md
openspec/changes/production-readiness-cleanup/: proposal.md  tasks.md
openspec/changes/productionize-backend-platform/: .openspec.yaml  README.md  design.md  tasks.md
openspec/changes/verify-runtime-dependencies/: proposal.md  tasks.md
openspec/specs/ai-diagnosis-assistance/: spec.md
openspec/specs/alert-management/: spec.md
openspec/specs/identity-access/: spec.md
openspec/specs/industrial-assets/: spec.md
openspec/specs/maintenance-workflow/: spec.md
openspec/specs/operational-monitoring/: spec.md
openspec/specs/platform-foundation/: spec.md
shared/contracts/: api-conventions.md
(+42 files in other folders)
